# Studio_Prj_Arch2021

./: .gitignore  README.md  demo
LgSwArchCode2021Distv2/Common/: TcpSendRecvJpeg.cpp  TcpSendRecvJpeg.h
LgSwArchCode2021Distv2/LgFaceRecDemoTCP_Jetson_Nano/: CMakeLists.txt  DemoWithCamera.sh  DemoWithVideo.sh  Makefile  RunVideo.sh  bg_DemoWithVideo.sh  bg_DemoWithVideo_Inter.sh  bg_LearningMode.sh  bg_train.sh  cmake_install.cmake
LgSwArchCode2021Distv2/LgFaceRecDemoTCP_Jetson_Nano/engines/: onet_engine_48_48.engine  pnet_engine_0_217_384.engine  pnet_engine_2_109_194.engine  pnet_engine_3_77_137.engine  pnet_engine_4_55_98.engine  pnet_engine_5_39_69.engine  pnet_engine_6_28_49.engine  pnet_engine_7_20_35.engine  pnet_engine_8_14_25.engine  rnet_engine_24_24.engine
LgSwArchCode2021Distv2/LgFaceRecDemoTCP_Jetson_Nano/faces/: info.txt  labels.txt
LgSwArchCode2021Distv2/LgFaceRecDemoTCP_Jetson_Nano/src/: FaceDetector.cpp  FaceDetector.h  ImageHandler.cpp  ImageHandler.h  LgFaceRecDemoTCP.cpp  NetworkInterface.cpp  NetworkInterface.h  PerformanceLogger.cpp  PerformanceLogger.h  common.cpp  common.h  face_classifier.cpp
LgSwArchCode2021Distv2/RecvImageTCP/: RecvImageTCP.cpp
LgSwArchCode2021Distv2/SendImageTCP/: SendImageTCP
Remote_UI/: CMakeLists.txt  prerequisite.sh  r.sh  tt.sh
Remote_UI/config/: Remote_UI_config.yaml  Remote_UI_config_nano.yaml  Remote_UI_config_xavier.yaml
Remote_UI/src/: CMainCtrlDlg.cpp  CMainCtrlDlg.h  CMainDialog.cpp  CMainDialog.h  CRunModeDlg.cpp  CRunModeDlg.h  Common_Util.cpp  Common_Util.h  JitterMeter.cpp  JitterMeter.h  main.cpp
dlib-19.22/dlib/: CMakeLists.txt  algs.h  console_progress_indicator.h  data_io.h  metaprogramming.h  revision.h  serialize.h
dlib-19.22/dlib/all/: source.cpp
dlib-19.22/dlib/bigint/: bigint_kernel_2.h
dlib-19.22/dlib/cuda/: cpu_dlib.cpp  cpu_dlib.h  cudnn_dlibapi.h  (+2 more)
dlib-19.22/docs/: algorithms.html  api.html  bayes.html  books.html  change_log.html  compile.html  compression.html  containers.html  dnn_dcgan_train_ex.cpp.html  dnn_inception_ex.cpp.html  dnn_instance_segmentation_ex.cpp.html  dnn_instance_segmentation_ex.h.html  dnn_instance_segmentation_train_ex.cpp.html  dnn_introduction3_ex.cpp.html  dnn_introduction_ex.cpp.html  dnn_mmod_ex.cpp.html  faq.html  git-logs.html  graph_tools.html  howto_contribute.html  imaging.html  index.html  intro.html  kernel_1a.html  kernel_1b.html  kernel_1c.html  kernel_1da.html  kernel_1db.html  kernel_1ea.html  kernel_1eb.html  kernel_1ec.html  kernel_2a.html  kernel_3a.html  kernel_3b.html  license.html  linear_algebra.html  metaprogramming.html  ml.html  network.html  old_release_notes.html  (+6 more)
dlib-19.22/examples/: CMakeLists.txt  dnn_dcgan_train_ex.cpp  dnn_inception_ex.cpp  dnn_instance_segmentation_ex.cpp  dnn_instance_segmentation_ex.h  dnn_instance_segmentation_train_ex.cpp  dnn_introduction3_ex.cpp  dnn_introduction_ex.cpp  dnn_mmod_ex.cpp  resnet.h
(+199 files in other folders)
